--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classroom Map Generator</title>
+    <title>Hoang's Generator</title>
     <style>
         :root {
             --bg: #0a0f1e; --card: #161e2d; --accent: #38bdf8;
